infrastructure/base/apps/oauth2-proxy/networkPolicy.yaml
# allow ingress from traefik
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "4180"
---
# allow ingress from prometheus
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "44180"
---
# allow ingress from oauth2-proxy to redis-ha
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-redis-ha-from-oauth2-proxy
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy-redis-ha
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: oauth2-proxy
      toPorts:
        - ports:
            - port: "6379"
---
# allow ingress from redis-ha to redis-ha
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-redis-ha-from-redis-ha
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy-redis-ha
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: oauth2-proxy-redis-ha
      toPorts:
        - ports:
            - port: "6379"
            - port: "26379"
---
# allow egress from oauth2-proxy to redis-ha
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-redis
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: oauth2-proxy-redis-ha
      toPorts:
        - ports:
            - port: "6379"
---
# allow egress from redis-ha to redis-ha
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-redis-ha-to-redis-ha
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy-redis-ha
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: oauth2-proxy-redis-ha
      toPorts:
        - ports:
            - port: "6379"
            - port: "26379"
---
# allow egress traffik from oauth2-proxy to keycloak
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-keycloak
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy
  egress:
    - toFQDNs:
        - matchPattern: "*.${DOMAIN}"
        - matchPattern: "*.${DOMAIN_2}"
        - matchPattern: "*.${DOMAIN_3}"
      toPorts:
        - ports:
            - port: "443"
---
# allow egress for keycloak callback
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-keycloak-callback
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: oauth2-proxy
  egress:
    - toEntities:
        - "world"
        - "cluster"
